Define display switcher shortcut via desktop file instead of at runtime

As per https://phabricator.kde.org/T12063 we want to move more towards defining shorcuts via desktop files instead of at runtime, which has several problems

Instead of creating a KActionCollection and QAction, assigning a global shortcut, and connecting to the QAction being triggered define a DBus call to be executed when triggering the shortcut

This fixes several problems:

- The current shortcut is registered under the kded5 component, which not only looks weird in the systemsettigs UI,
it also breaks in Plasma 6 where kded6 is used

- On Wayland the kded module isn't used, so nothing handles the shortcut there currently

BUG: 479647
CCBUG: 475694
(cherry picked from commit 167770b53920ebd3c75ed5c7328ccb651c6b6333)